@@ -24,6 +24,8 @@
 	45.
 	* hurd/hurdselect.c (_hurd_select): Pass MACH_RCV_INTERRUPT to
 	__mach_msg.  If that returns MACH_RCV_INTERRUPTED, set ERR to EINTR.
+	* hurd/hurdselect.c (_hurd_select): Remove unreachable check for
+	MACH_RCV_TIMED_OUT.
 
 2015-02-06  Roland McGrath  <roland@hack.frob.com>
 
